styles.css
/* ... */
/* ______________________________ */
/*  */



/* schedule */
/* ______________________________ */

#scheduled-item-list-container{
    display:flex;
    flex-direction:column;
    align-items: center;
    justify-content: center;

    gap:.25rem;

    z-index: 998;
}
.remove-button:hover {
    cursor:pointer;
}
.camera-remove {
    right:50% !important;
    bottom:unset !important;
    top:2px !important; 
    
    transform:translate(50%,0);

    background:var(--primary-bg);
    
    padding:4px;
}
.remove-button {
    position:absolute;
    bottom:-5px;
    right:0;

    padding:10px ;

    background:var(--primary-bg);

    color: var(--alert-color);

    z-index: 990;
}
.si-list-item:hover {
    cursor: pointer;
    transform:scale(.98);
}
.si-completed{
    opacity:.7;
}
/* .si-glass{
    backdrop-filter: blur(1.9px);
    -webkit-backdrop-filter: blur(1.9px);
} */

.si-list-item {
    animation: rollingRow 7s infinite alternate forwards;

    box-shadow: inset -6px -.25rem 12px .9px #333;

    width: 97%;
    /* min-height:66px; */

    background:var(--secondary-bg);

    /* border:2px solid var(--border-abstract); */

    color:var(--secondary-color);

    display:flex;
    justify-content: start;
    align-items: center;
    gap:1px;

    padding: 0;

    position:Relative;

    border:2px solid #000;
    border-radius:12px;

    overflow:hidden;

}

@keyframes rollingRow {
    from {
        box-shadow: inset -6px -.5rem 12px .9px #333;
    }
    to {
        box-shadow: inset 6px .5rem 12px .9px #333;
    }
}
.bg-yellow{
    background:yellow !important;
}
.bg-green{
    background:green !important;
}
.bg-red{
    background:red !important;
}

.camera-btn,#date-container, #type-container, #distance-container, #distance-container, 
.reserve-btn {
    display:flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

    background:var(--primary-bg);

    width:55px;
    height:55px;

    padding:.25rem;

    gap:3px;

}
.camera-btn {
    background:#fff !important;
}
.camera-view {

    border-radius:50% !important;
    border:.5rem solid var(--border-abstract);

    height:250px !important;
    width:250px !important;

    aspect-ratio: 1 / 1;

    animation: appearCamera 1s forwards;
}
.camera-on {
    background:#f00 !important;
}
#date-container > p,
#date-container > h4,
#distance-container > p,
#distance-container > h4,
#time-container > p,
#type-container > h4,
#type-container > p,
.camera-btn,
.reserve-btn
{
    color:var(--primary-color);
}
.camera-btn:hover,
.reserve-btn:hover{
    text-decoration:underline;
    text-underline-offset: 2px;
    text-decoration-color: var(--primary-color);
}
#type-container > p{
    color:var(--primary-color);

    text-align: center;

    font-size:9pt;
}
.reserve-btn{
    font-weight:bold;
    letter-spacing: 1px;
    font-size:9pt !important;

    /* color:var(--priamry-color); */
    color:#000;
}
.join-btn{
    background: var(--reserve-join) !important;
}
.leave-btn{
    background: var(--reserve-leave) !important;
}
.si-list-item > p{
    font-size:11pt;
}
.si-list-item > h4{
    font-size:18pt;
}

#time-container > p {
    font-size:9pt;
}

#time-container {
    position:absolute;
    right:0;
    top:0;

    padding:4px;
    
    background:var(--primary-bg);

    border-radius:0 0 0 6px;

    border-left:2px solid var(--border-primary);
    border-bottom:2px solid var(--border-primary);

}

/* ______________________________ */

/* datetime */

/* input */
input, select {
    height:35px;
    outline: none !important;
}

a{
    outline:none;
}

#input-container{
    overflow: hidden;
    
    /* width:100%; */

    border:2px solid #000;

    background:var(--primary-bg );
    padding:6px;

    display:flex;
    justify-content: center;
    align-items: center;
    gap:.5rem;

    flex-wrap:wrap;

    transform: translate(0,-25px);

    /* margin-top:.5rem; */
}

#datetime-submit{
    background:var(--secondary-bg);
    padding:4px;
    border-radius: 6px;
    font-size:12pt; 

    color:var(--secondary-color);

    height: 35px;

    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    font-size:11pt;
}

#datetime-submit:hover {
    cursor:pointer;
}


/* legend */
#schedule-legend {
    display:flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    gap:4px;
}
#legend-title {
    margin-bottom:4px;
    text-decoration: underline;
    text-underline-offset: 2px;

    color:var(--primary-color);

}
#schedule-legend > div {
    display:inline-flex;
    flex-direction: row-reverse;
    gap:.5rem;
    /* border:2px solid var(--border-abstract); */
    width:unset;
}
.legend-label {
    font-weight: bold;
    font-size:9pt;

    color:var(--primary-color);
}
.legend-color{
    min-height:15px;
    min-width:15px;
    height:15px;
    width:15px;
    border-radius: 50%;
}
.lc-yellow {
    background-color:yellow;
}
.lc-green {
    background-color:green;

}
.lc-red {
    background-color:red;
}

/* modal */
.modal-video-fixed-top {
    top: 25% !important;
}
.completion-check {
    position:absolute;
    bottom:0.5px;
    right:15px;

    padding:2px;

    transform:rotate(20deg);

    border-radius: 50%;

    background:var(--primary-bg);

    height:75px;
    width:75px;

    animation: flash_completion 2.5s infinite alternate;
}

@keyframes flash_completion {
    from {
        transform:scale(.75) rotate(20deg);
    } 
    to {
        transform:scale(1) rotate(0);
    }
}


.completion-btn{
    color:#fff;


    padding:.5rem;

    font-size:11pt;
    font-weight:bold;

    background-color: green;

    width:100%;

    text-align: center;

    /* border:5px solid var(--border-secondary); */
    border-right:none !important;
    position:absolute;
    bottom:0;
    right:0;
}
.completion-btn:hover{
    cursor:pointer;
}
/* ... */

